<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 The uwuAOSP Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/app_jump_target_rule_header_title">
        <com.android.settingslib.widget.AppPreference
            android:key="app_jump_target_rule_header"
            android:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_jump_target_rules_title">
        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="app_jump_target_rule_inherit"
            android:summary="@string/app_jump_target_rule_inherit_summary"
            android:title="@string/app_jump_pair_mode_inherit_title" />

        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="app_jump_target_rule_always_allow"
            android:summary="@string/app_jump_target_rule_allow_summary"
            android:title="@string/app_jump_pair_mode_allow_title" />

        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="app_jump_target_rule_ask"
            android:summary="@string/app_jump_target_rule_ask_summary"
            android:title="@string/app_jump_pair_mode_ask_title" />

        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="app_jump_target_rule_always_block"
            android:summary="@string/app_jump_target_rule_block_summary"
            android:title="@string/app_jump_pair_mode_block_title" />
    </PreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="app_jump_target_rule_footer" />
</androidx.preference.PreferenceScreen>
